--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -35,7 +35,13 @@
 
 
 <main id="content" class="content" role="main">
-<p class="inner">{{ .Site.Params.description }}</p>
+<div class="inner description">
+    <img class="legal-img" src="/images/jab_profilepic_1.png" alt="">
+   <p> {{ .Site.Params.description }}</p>
+</div>
+<p class="inner">
+
+</p>
 <hr class="inner">
 
 {{ partial "home-content.html" . }}
