--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -858,7 +858,7 @@ body.nav-opened .nav {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     display: block;
-    height: 38px;
+    height: 100px;
     padding: 1px 0 5px 0;
     width: auto;
 }
@@ -2122,18 +2122,35 @@ body:not(.post-template) .post-title {
   }
 }
 
-
-@media only screen and (max-width: 500px) {
-  .read-next {
-    margin-top: 0;
-    margin-bottom: -37px;
-  }
-
-  .read-next .post {
-    width: 100%;
-  }
+.legal-img {
+  float: right;
 }
 
+.description {
+    padding: 2rem;
+}
+
+@media only screen and (max-width: 500px) {
+    .read-next {
+        margin-top: 0;
+        margin-bottom: -37px;
+    }
+    
+    .description {
+        text-align: center;
+    }
+    .description p {
+        text-align: left;
+    }
+
+    .read-next .post {
+        width: 100%;
+    }
+    
+    .legal-img {
+      float: none;
+    }
+}
 
 /* ==========================================================================
    End of file. Animations should be the last thing here. Do not add stuff
