--- a/layouts/page/index.html
+++ b/layouts/page/index.html
@@ -38,6 +38,7 @@
 <div class="inner description">
     <img class="legal-img" src="/images/jab_profilepic_1.png" alt="">
    <p> {{ .Site.Params.description }}</p>
+   <h2>The Legal Blog : of { j }</h2>
 </div>
 <p class="inner">
 
