--- a/layouts/partials/home-content.html
+++ b/layouts/partials/home-content.html
@@ -21,7 +21,14 @@
     <div class="extra-pagination inner">
         {{ partial "pagination.html" $paginator }}
     </div>
-
+    {{ if eq $paginator.PageNumber 1 }}  
+    <div class="inner description">
+        <img class="legal-img" src="/images/jab_profilepic_1.png" alt="">
+        <p> {{ .Site.Params.description }}</p>
+        <h2>The Legal Blog : of { j }</h2>
+    </div>
+    <hr class="inner">
+     {{ end }}
     {{ range $index, $page := $paginator.Pages }}
         {{ partial "li.html" . }}
     {{ end }}
