--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -2126,6 +2126,10 @@ body:not(.post-template) .post-title {
     padding: 2rem;
 }
 
+.description h2 {
+    text-align: center;
+}
+
 @media only screen and (max-width: 500px) {
     .read-next {
         margin-top: 0;
