--- a/layouts/partials/home-content.html
+++ b/layouts/partials/home-content.html
@@ -23,8 +23,8 @@
     </div>
     {{ if eq $paginator.PageNumber 1 }}  
     <div class="inner description">
-        <img class="legal-img" src="/images/jab_profilepic_1.png" alt="">
-        <p> {{ .Site.Params.description }}</p>
+        <img class="legal-img" src="{{ $.Site.Data.intro.profileImg }}" alt="">
+        <p>{{ $.Site.Data.intro.bio }}</p>
         <h2>The Legal Blog : of { j }</h2>
     </div>
     <hr class="inner">
