--- a/layouts/partials/home-content.html
+++ b/layouts/partials/home-content.html
@@ -23,7 +23,7 @@
     </div>
     {{ if eq $paginator.PageNumber 1 }}  
     <div class="inner description">
-        <img class="legal-img" src="{{ $.Site.Data.intro.profileImg }}" alt="">
+        <img class="legal-img" src="{{ $.Site.Data.intro.profile_img }}" alt="">
         <p>{{ $.Site.Data.intro.bio }}</p>
         <h2>The Legal Blog : of { j }</h2>
     </div>
